Add @types/cors dependency to package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "typescript-eslint": "^8.29.0"
     },
     "dependencies": {
+        "@types/cors": "^2.8.17",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^5.1.0",
