Add @types/bcrypt and update bcrypt version in package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
         "typescript-eslint": "^8.29.0"
     },
     "dependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^5.1.0",
