--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "dependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
+        "@types/jsonwebtoken": "^9.0.9",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
         "module-alias": "^2.2.3",
         "mongoose": "^8.13.2",
         "zod": "^3.24.2"
