Implement email service with nodemailer integration and create email routes

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/jsonwebtoken": "^9.0.9",
+        "@types/nodemailer": "^6.4.17",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
@@ -62,6 +63,7 @@
         "jsonwebtoken": "^9.0.2",
         "module-alias": "^2.2.3",
         "mongoose": "^8.13.2",
+        "nodemailer": "^6.10.1",
         "zod": "^3.24.2"
     }
 }
