--- a/package.json
+++ b/package.json
@@ -52,15 +52,18 @@
         "typescript-eslint": "^8.29.0"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.806.0",
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/jsonwebtoken": "^9.0.9",
+        "@types/mime-types": "^2.1.4",
         "@types/nodemailer": "^6.4.17",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
+        "mime-types": "^3.0.1",
         "module-alias": "^2.2.3",
         "mongoose": "^8.13.2",
         "nodemailer": "^6.10.1",
